fixed bug where filter and refresh tasks button would misalign when resizing window

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,5 +1,4 @@
 body .customContainer {
 	margin-top: 85px;
 	margin-bottom: 30px;
-	max-width: 750px;
 }
